# spark-expectations

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  makefile  mike-mkdocs_vbm2uyw.yml  mkdocs.yml  noop  prospector.yaml  pyproject.bak.toml  pyproject.toml  versions.json
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  onpush.yml  publish-gh-pages.yml
0.8.0/: 404.html  index.html  sitemap.xml
0.8.0/examples/: index.html
0.8.0/search/: search_index.json
0.8.1/: 404.html  index.html  sitemap.xml
0.8.1/examples/: index.html
1.0.0/: 404.html  index.html  sitemap.xml
1.0.0/bigquery/: index.html
1.0.0/delta/: index.html
1.0.0/examples/: index.html
1.0.0/iceberg/: index.html
1.0.0/search/: search_index.json
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/bigquery/: index.html
1.1.0/delta/: index.html
1.1.0/examples/: index.html
1.1.0/iceberg/: index.html
1.1.1/: 404.html  index.html  objects.inv  sitemap.xml
1.1.1/bigquery/: index.html
1.1.1/delta/: index.html
1.1.1/examples/: index.html
1.1.1/iceberg/: index.html
1.1.1/se_diagrams/: spark_expectations_flow_and_feature.pptx
2.0.0/: 404.html  index.html  sitemap.xml
2.0.0/bigquery/: index.html
2.0.0/delta/: index.html
2.0.0/examples/: index.html
2.0.0/iceberg/: index.html
2.1.0/: 404.html  index.html  objects.inv  sitemap.xml
2.1.0/bigquery/: index.html
2.1.0/delta/: index.html
2.1.0/examples/: index.html
2.1.0/iceberg/: index.html
2.7.1/: 404.html  index.html  sitemap.xml
2.7.1/Observability_examples/: index.html
2.7.1/bigquery/: index.html
2.7.1/delta/: index.html
2.7.1/email_notifications/: index.html
2.7.1/examples/: index.html
2.7.1/github_copilot_chat_commands/: index.html
2.7.1/iceberg/: index.html
2.7.1/key_prompts_for_repo/: index.html
2.7.2/: 404.html  index.html  sitemap.xml
2.7.2/Observability_examples/: index.html
2.7.2/bigquery/: index.html
2.7.2/delta/: index.html
2.7.2/email_notifications/: index.html
2.7.2/examples/: index.html
2.7.2/github_copilot_chat_commands/: index.html
2.7.2/iceberg/: index.html
2.7.2/key_prompts_for_repo/: index.html
2.7.3/: 404.html  index.html  sitemap.xml
2.7.3/Observability_examples/: index.html
2.7.3/bigquery/: index.html
2.7.3/delta/: index.html
2.7.3/email_notifications/: index.html
2.7.3/examples/: index.html
2.7.3/github_copilot_chat_commands/: index.html
2.7.3/iceberg/: index.html
2.7.3/key_prompts_for_repo/: index.html
2.8.0/: 404.html  index.html  objects.inv  sitemap.xml
2.8.0/Observability_examples/: index.html
2.8.0/bigquery/: index.html
2.8.0/delta/: index.html
2.8.0/email_notifications/: index.html
2.8.0/examples/: index.html
2.8.0/github_copilot_chat_commands/: index.html
2.8.0/iceberg/: index.html
2.8.0/key_prompts_for_repo/: index.html
2.8.1/: 404.html  index.html  sitemap.xml
2.8.1/Observability_examples/: index.html
2.8.1/bigquery/: index.html
2.8.1/delta/: index.html
2.8.1/email_notifications/: index.html
2.8.1/examples/: index.html
2.8.1/github_copilot_chat_commands/: index.html
2.8.1/iceberg/: index.html
2.8.1/key_prompts_for_repo/: index.html
2.8.1/search/: search_index.json
2.9.1/: 404.html  index.html  objects.inv  sitemap.xml
2.9.1/Observability_examples/: index.html
2.9.1/bigquery/: index.html
2.9.1/delta/: index.html
2.9.1/examples/: index.html
2.9.1/github_copilot_chat_commands/: index.html
2.9.1/iceberg/: index.html
2.9.1/key_prompts_for_repo/: index.html
2.9.1/search/: search_index.json
containers/: compose.yaml
containers/jupyterlab/: Dockerfile.notebook
containers/kafka/: Dockerfile.kafka
containers/mailserver/: Dockerfile.mailpit
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/Observability_examples/: index.html
dev/bigquery/: index.html
dev/delta/: index.html
dev/email_notifications/: index.html
dev/examples/: index.html
dev/iceberg/: index.html
dev/se_diagrams/: spark_expectations_flow_and_feature.pptx
dev/search/: search_index.json
docs/: Observability_examples.md  bigquery.md  delta.md  email_notifications.md  examples.md  examples_notebooks.md  github_copilot_chat_commands.md  iceberg.md  index.md  key_prompts_for_repo.md  serverless.md
docs/api/: actions.md  base_notification_plugin.md  base_setup.md  base_sink_plugin.md  context.md  core_init.md  delta_sink_plugin.md  email_plugin.md  exceptions.md  expectations.md  udf.md  (+16 more)
latest/: 404.html  index.html  objects.inv  sitemap.xml
main/: 404.html  index.html  sitemap.xml
main-test/: 404.html  index.html  objects.inv  sitemap.xml
main_test2/: 404.html  index.html  sitemap.xml
notebooks/: spark_expectation_basic.ipynb  spark_expectation_basic_dbx.ipynb  spark_expectation_basic_jlab.ipynb  spark_expectation_basic_mail.ipynb  spark_expectation_basic_mail_templates.ipynb  spark_expectation_basic_pagerduty_notification.ipynb  spark_expectation_notifications_integration.ipynb  spark_expectations_aggregation_rules.ipynb  spark_expectations_basic_slack_notification.ipynb
spark_expectations/: __init__.py
tests/: __init__.py  conftest.py  test__init__.py
ui/: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc.cjs  .stylelintrc.json  DEVELOPER.md  README.md  generate-react-cli.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs  vitest.setup.mjs
v1.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v1.1.1/: 404.html  index.html  sitemap.xml
v2.0.0/: 404.html  index.html  objects.inv  sitemap.xml
v2.1.1/: 404.html  index.html  objects.inv  sitemap.xml
v2.3.0/: 404.html  index.html  sitemap.xml
v2.4.0/: 404.html  index.html  objects.inv  sitemap.xml
v2.5.0/: 404.html  index.html  objects.inv  sitemap.xml
v2.6.0/: 404.html  index.html  sitemap.xml
v2.6.1/: 404.html  index.html  sitemap.xml
v2.7.0/: 404.html  index.html  objects.inv  sitemap.xml
v2.7.2/: 404.html  index.html  sitemap.xml
v2.9.0/: 404.html  index.html  objects.inv  sitemap.xml
(+1564 files in other folders)
