[tool.poetry]
name = "spark-expectations"
version = "0.0.0"
description = "This project helps us to run Data Quality Rules in flight while spark job is being run"
authors = ["Ashok Singamaneni <ashok.singamaneni@nike.com>"]
readme = "README.md"
packages = [{ include = "spark_expectations" }]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
pluggy = ">=1"
pyspark = ">=3.0.0,<4.0.0"
requests = ">=2.28.1"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
botocore = "1.29.133"                                      # This is just for fixing the dependency resolution version on cerberus-python-client
cerberus-python-client = "2.5.4"
coverage = "7.2.5"
griffe = "^1.5.4"
ipykernel = "^6.29.2"
mdx-include = ">=1.4.1,<2.0.0"
mike = "1.1.2"
mkdocs = "1.5.3"
mkdocs-autorefs = "1.2.0"
mkdocs-click = "0.8.0"
mkdocs-markdownextradata-plugin = "0.2.5"
mkdocs-material = "9.4.0"
mkdocstrings = { extras = ["python"], version = "0.27.0" }
mypy = "1.3.0"
numpy = "1.26.4"
pandas = "^2.2.3"
pre-commit = "3.3.1"
prospector = "^1.12.1"
pyspark = {version=">=3.4.0, <4.0.0", extras=["connect"]}
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
types-requests = "2.28.11.16"
types-setuptools = "67.7.0.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
bump = true
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.whl
  )/
#  | foo.py           # also separately exclude a file named foo.py in
#                     # the root of the project
)
'''

#[tool.poetry_bumpversion.file."spark_expectations/__init__.py"]
#search = '__version__ = "{current_version}"'
#replace = '__version__ = "{new_version}"'

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
follow_imports = "skip"
